<resources>
    <string name="app_name">Green Beat Machine</string>
    <string name="action_settings">Settings</string>
    <string name="master_volume">Volume</string>
    <string name="midi_view_label">Midi Sequencer</string>
    <string name="mixer_view_label">Mixer</string>
    <string name="play">Play</string>
    <string name="to_midi_sequencer">Midi Sequencer</string>
    <string name="to_mixer">Mixer</string>
    <string name="pause">Pause</string>
    <string name="to_beat_pad">To Beat Pad</string>
    <string name="toggle_metronome">Toggle Metronome</string>
    <string name="playing">PLAYING</string>

    <string name="track_1">Track 1</string>
    <string name="track_2">Track 2</string>
    <string name="track_3">Track 3</string>
    <string name="track_4">Track 4</string>
    <string name="track_5">Track 5</string>
    <string name="track_6">Track 6</string>
    <string name="track_7">Track 7</string>
    <string name="track_8">Track 8</string>

    <string name="master">Master</string>
    <string name="mute">Mute</string>
    <string name="pan">Pan</string>
    <string name="sound">Sound</string>
    <string name="type">Type</string>
    <string name="sounds">Sounds</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="BPM">BPM</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>

</resources>
