<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/button2" />

    </LinearLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_min_widget_distance">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.78"
        android:weightSum="1">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:scrollIndicators="left"
            android:showDividers="beginning|none|middle|end">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight=".125">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_1"
                    android:id="@+id/textViewTrack1"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute1"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_column="7"
                    android:checked="false"
                    android:layout_margin="@dimen/activity_min_widget_distance"
                    android:textAlignment="center"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight=".125">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_2"
                    android:id="@+id/textViewTrack2"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute2"
                    android:layout_column="7"
                    android:checked="false"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_margin="@dimen/activity_min_widget_distance" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight=".125">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_3"
                    android:id="@+id/textViewTrack3"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute3"
                    android:layout_column="7"
                    android:checked="false"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_margin="@dimen/activity_min_widget_distance" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight=".125">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_4"
                    android:id="@+id/textViewTrack4"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute4"
                    android:layout_column="7"
                    android:checked="false"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_margin="@dimen/activity_min_widget_distance" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight=".125">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_5"
                    android:id="@+id/textViewTrack5"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute5"
                    android:layout_column="7"
                    android:checked="false"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_margin="@dimen/activity_min_widget_distance" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight=".125">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_6"
                    android:id="@+id/textViewTrack6"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute6"
                    android:layout_column="7"
                    android:checked="false"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_margin="@dimen/activity_min_widget_distance" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight=".125">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_7"
                    android:id="@+id/textViewTrack7"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute7"
                    android:layout_column="7"
                    android:checked="false"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_margin="@dimen/activity_min_widget_distance" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".125"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_8"
                    android:id="@+id/textViewTrack8"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:maxLength="10" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMute8"
                    android:layout_column="7"
                    android:checked="false"
                    android:button="@drawable/custom_checkbox_selector"
                    android:layout_margin="@dimen/activity_min_widget_distance" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.13">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_1"
                    android:layout_column="0"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_2"
                    android:layout_column="2"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_3"
                    android:layout_column="3"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_4"
                    android:layout_column="4"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_5"
                    android:layout_column="0"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_6"
                    android:layout_column="2"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_7"
                    android:layout_column="3"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_8"
                    android:layout_column="4"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_9"
                    android:layout_column="0"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_10"
                    android:layout_column="2"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_11"
                    android:layout_column="3"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_12"
                    android:layout_column="4"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_13"
                    android:layout_column="0"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_14"
                    android:layout_column="2"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_15"
                    android:layout_column="3"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxMidiStep_1_16"
                    android:layout_column="4"
                    android:checked="false" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>
        </TableLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>